// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxDropdownToggle customize 1`] = `
<div>
  <button
    class="button primary dropdown-toggle dropdown-toggle-split"
    tabindex="0"
    type="button"
  >
    Test
    <span
      class="visually-hidden"
    >
      Toggle Dropdown
    </span>
  </button>
</div>
`;

exports[`loads and displays CxDropdownToggle component 1`] = `
<div>
  <button
    class="button primary dropdown-toggle"
    tabindex="0"
    type="button"
  >
    Test
  </button>
</div>
`;
